# toolchain-kubernetes

./: .barrels.json  .dockerignore  .gitignore  Dockerfile  deploy.sh  docker-compose.yml  eslint.config.js  index.ts  package.json  pgbouncer.env  pnpm-lock.yaml  tsconfig.base.json  tsconfig.spec.json
cdktf/: .gitignore  README.md  cdktf.json  docker-login.js  main.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
cdktf/lib/: chats-stack.ts  config.ts  deployment-stack.ts  images-stack.ts  minio-stack.ts  tsed-stack.ts
cdktf/lib/buildx/: buildx-bake.ts  buildx-image.ts  dependable-script.ts
copilot/: .workspace
copilot/environments/prod/: manifest.yml
copilot/k3s/: manifest.yml
copilot/tsed/: manifest.yml
copilot/tsed/overrides/: cfn.patches.yml
otel/: config.yaml  init.sql
pgbouncer/: Cargo.toml  Dockerfile  daemon.ini  entrypoint.sh  main.rs  pgbouncer.ini  userlist.sh
src/: Server.ts  index.ts  open-telemetry.ts
src/config/: index.ts  mikro-orm.ts
src/config/envs/: index.ts
src/config/logger/: index.ts  mikro-orm.ts  open-telemetry.ts  pino.ts  tsed.ts  typeorm.ts
src/controllers/rest/: HelloWorldController.ts  (+4 more)
src/datasources/: PostgresDatasource.ts
src/entities/: KeyValue.ts  index.ts
src/interface/: KeyValue.ts
src/repositories/: KeyValue.ts  index.ts
src/schema/: KeyValue.ts
tsed/: .env  Dockerfile  README.md  docker-compose.yml  ecosystem.config.cjs  eslint.config.js  jsconfig.json  package.json  pnpm-lock.yaml  tsconfig.base.json
tsed/src/: Server.ts  index.ts  mikro-orm.config.ts  open-telemetry.ts
(+11 files in other folders)
